Update team section in website's footer
Reference #110.

--- a/src/index.html
+++ b/src/index.html
@@ -184,12 +184,14 @@
                 </p>
 
                 A project from <a href="https://github.com/h5bp">H5BP</a> currently maintained by
+                <a href="http://mathiasbynens.be/">Mathias Bynens</a>,
+                <a href="https://twitter.com/alrra">Cãtãlin Mariş</a>,
+                and <a href="http://drublic.de/">Hans Christian Reinl</a>.<br>
+
+                Past team members:
                 <a href="http://nicolasgallagher.com/">Nicolas Gallagher</a>,
                 <a href="http://paulirish.com/">Paul Irish</a>,
-                <a href="http://mathiasbynens.be/">Mathias Bynens</a>,
-                <a href="http://nimbupani.com/">Divya Manian</a>,
-                <a href="https://twitter.com/alrra">Cãtãlin Mariş</a>,
-                and <a href="http://drublic.de/">Hans Christian Reinl</a>.
+                and <a href="http://nimbupani.com/">Divya Manian</a>.
             </div>
         </div><!-- end site-footer -->
 
